<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2014 Gustavo Martin Morcuende

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="app_name">Weather Information</string>
    <string name="icon_weather_description">Icon weather</string>

    <!-- Activities Current, Overview and Specific< -->
    <string name="text_tab_five_days_forecast">5 DAY FORECAST</string>
    <string name="text_tab_ten_days_forecast">10 DAY FORECAST</string>
    <string name="text_tab_fourteen_days_forecast">14 DAY FORECAST</string>
    <string name="text_field_sun_rise">SUN RISE</string>
    <string name="text_field_sun_set">SUN SET</string>
    <string name="text_field_feels_like">FEELS LIKE</string>
    <string name="text_field_clouds">CLOUDS</string>
    <string name="text_field_rain">RAIN</string>
    <string name="text_field_wind">WIND</string>
    <string name="text_field_snow">SNOW</string>
    <string name="text_field_pressure">PRESSURE</string>
    <string name="text_field_humidity">HUMIDITY</string>
    <string name="text_units_mm3h">mm 3h</string>
    <string name="text_units_percent">%</string>
    <string name="text_field_remote_error">No data available</string>
    <string name="text_field_description_when_error">no description available</string>
    <string name="text_field_no_chosen_location">no chosen location</string>

    <!-- Preferences Acitivity -->
    <string name="weather_preferences_action_settings">Settings</string>
    <string name="weather_preferences_units">Units</string>
    <string name="weather_preferences_temperature_key">weather_preferences_temperature</string>
    <string name="weather_preferences_temperature">Temperature</string>
    <string name="weather_preferences_temperature_celsius">ºC</string>
    <string name="weather_preferences_temperature_fahrenheit">ºF</string>
    <string name="weather_preferences_temperature_kelvin">K</string>
    <string name="weather_preferences_temperature_celsius_human_value">celsius</string>
    <string name="weather_preferences_temperature_fahrenheit_human_value">fahrenheit</string>
    <string name="weather_preferences_temperature_kelvin_human_value">kelvin</string>
    <string name="weather_preferences_notifications">Notifications</string>
    <string name="weather_preferences_notifications_switch_off_summary">Disabled</string>
    <string name="weather_preferences_notifications_switch_on_summary">Enabled</string>
    <string name="weather_preferences_notifications_switch_off">OFF</string>
    <string name="weather_preferences_notifications_switch_on">ON</string>
    <string name="weather_preferences_notifications_switch_key">weather_preferences_notifications_switch</string>
    <string name="weather_preferences_update_time_rate_key">weather_preferences_update_time_rate</string>
    <string name="weather_preferences_update_time_rate">Update time rate</string>
    <string name="weather_preferences_notifications_temperature_key">weather_preferences_notifications_temperature</string>
    <string name="weather_preferences_notifications_temperature">Temperature</string>
    <string name="weather_preferences_day_forecast_key">weather_preferences_day_forecast</string>
    <string name="weather_preferences_day_forecast">Forecast days number</string>
    <string name="weather_preferences_refresh_interval_key">weather_preferences_refresh_interval</string>
    <string name="weather_preferences_refresh_interval">Refresh interval</string>
    <string name="weather_preferences_wind_key">weather_preferences_wind</string>
    <string name="weather_preferences_wind">Wind</string>
    <string name="weather_preferences_wind_meters">m/s</string>
    <string name="weather_preferences_wind_miles">mph</string>
    <string name="weather_preferences_wind_human_value_meters">meter per second</string>
    <string name="weather_preferences_wind_human_value_miles">miles per hour</string>
    <string name="weather_preferences_pressure_key">weather_preferences_pressure</string>
    <string name="weather_preferences_pressure">Pressure</string>
    <string name="weather_preferences_pressure_pascal">hpa</string>
    <string name="weather_preferences_pressure_standard_atm">atm</string>
    <string name="weather_preferences_pressure_human_value_pascal">pascal</string>
    <string name="weather_preferences_pressure_human_value_standard_atm">standard atmosphere</string>

    <!-- Widget Preferences Activity -->
    <string name="widget_preferences_action_settings">Settings</string>
    <string name="widget_preferences_button_refresh">Refresh</string>
    <string name="widget_configure_button_refresh_summary">Refresh values</string>
    <string name="widget_preferences_temperature_units">Temperature units</string>
    <string name="widget_preferences_temperature_units_key">widget_preferences_temperature</string>
    <string name="widget_preferences_country">Country</string>
    <string name="widget_preferences_country_switch_key">widget_preferences_country_switch</string>
    <string name="widget_preferences_country_switch_off_summary">Hide country</string>
    <string name="widget_preferences_country_switch_on_summary">Show country</string>
    <string name="widget_preferences_country_switch_off">OFF</string>
    <string name="widget_preferences_country_switch_on">ON</string>

    <!-- Map Activity -->
    <string name="weather_map_action_map">Select Location</string>
    <string name="city_not_found">city not found</string>
    <string name="country_not_found">country not found</string>
    <string name="progress_dialog_generic_message">Please wait…</string>
    <string name="weather_map_button_savelocation">Save Location</string>
    <string name="weather_map_button_getlocation">Get Location</string>
    <string name="weather_map_not_enabled_location">You do not have enabled location.</string>
    <string name="weather_map_no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="weather_map_mark_location">Mark your location</string>

    <!-- About Activity -->
    <string name="weather_about_action">About</string>
    <string name="weather_about_application">APPLICATION</string>
    <string name="weather_about_application_version">Version 1.0</string>
    <string name="weather_about_application_legal">Legal information</string>
    <string name="weather_about_application_source_code">Source code</string>
    <string name="weather_about_application_remote_data">WEATHER DATA</string>
    <string name="weather_about_application_remote_data_openweathermap">OpenWeatherMap</string>
    <string name="weather_about_application_developer">DEVELOPER</string>
    <string name="weather_about_application_developer_name">Gustavo Martin Morcuende</string>
    <string name="weather_about_application_developer_web">Web</string>

    <!-- Licenses Activity -->
    <string name="weather_licenses_title">Licenses</string>

    <!-- DO NOT TRANSLATE -->
    <string name="uri_api_weather_today">http://api.openweathermap.org/data/{0}/weather?lat={1}&amp;lon={2}&amp;cnt=1</string>
    <string name="uri_api_weather_forecast">http://api.openweathermap.org/data/{0}/forecast/daily?lat={1}&amp;lon={2}&amp;cnt={3}&amp;mode=json</string>
    <string name="api_version">2.5</string>
    <string name="application_source_code_url">https://github.com/gumartinm/JavaForFun/tree/master/Android/WeatherInformation</string>
    <string name="my_url">http://gumartinm.name</string>
    <string name="openweahtermap_url">http://openweathermap.org/</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="http_client_agent">Android WeatherInformation Agent</string>

</resources>
