<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference android:key="@string/weather_preferences_day_forecast_key"
        android:title="@string/weather_preferences_day_forecast"
        android:entries="@array/weather_preferences_day_forecast_human_value"
        android:entryValues="@array/weather_preferences_day_forecast"
        android:selectable="true"
        android:persistent="true"
        android:defaultValue="14"
        android:summary="14 day forecast" />
    <ListPreference android:key="@string/weather_preferences_refresh_interval_key"
        android:title="@string/weather_preferences_refresh_interval"
        android:entries="@array/weather_preferences_refresh_interval_human_value"
        android:entryValues="@array/weather_preferences_refresh_interval"
        android:selectable="true"
        android:persistent="true"
        android:defaultValue="300000"
        android:summary="five minutes" />
    <PreferenceCategory android:title="@string/weather_preferences_units">
        <ListPreference android:key="@string/weather_preferences_temperature_key"
            android:title="@string/weather_preferences_temperature"
            android:summary="@string/weather_preferences_temperature_celsius_human_value"
            android:entries="@array/weather_preferences_temperature_human_value"
            android:entryValues="@array/weather_preferences_temperature"
            android:selectable="true"
            android:persistent="true"
            android:defaultValue="@string/weather_preferences_temperature_celsius" />
        <ListPreference android:key="@string/weather_preferences_wind_key"
            android:entryValues="@array/weather_preferences_wind"
            android:entries="@array/weather_preferences_wind_human_value"
            android:summary="@string/weather_preferences_wind_human_value_meters"
            android:selectable="true"
            android:persistent="true"
            android:defaultValue="@string/weather_preferences_wind_meters"
            android:title="@string/weather_preferences_wind"/>
        <ListPreference android:key="@string/weather_preferences_pressure_key"
            android:entryValues="@array/weather_preferences_pressure"
            android:entries="@array/weather_preferences_pressure_human_value"
            android:summary="@string/weather_preferences_pressure_human_value_pascal"
            android:selectable="true"
            android:persistent="true"
            android:defaultValue="@string/weather_preferences_pressure_pascal"
            android:title="@string/weather_preferences_pressure"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/weather_preferences_notifications">
        <SwitchPreference android:key="@string/weather_preferences_notifications_switch_key"
            android:summaryOn="@string/weather_preferences_notifications_switch_on_summary"
            android:summaryOff="@string/weather_preferences_notifications_switch_off_summary"
            android:switchTextOff="@string/weather_preferences_notifications_switch_off"
            android:switchTextOn="@string/weather_preferences_notifications_switch_on"
            android:selectable="true"
            android:enabled="true"
            android:defaultValue="@string/weather_preferences_notifications_switch_off"
            android:disableDependentsState="false"
            android:persistent="true"/>
        <ListPreference android:key="@string/weather_preferences_update_time_rate_key"
        	android:entries="@array/weather_preferences_update_time_rate_human_value"
        	android:entryValues="@array/weather_preferences_update_time_rate"
        	android:title="@string/weather_preferences_update_time_rate"
        	android:defaultValue="900"
        	android:persistent="true"
        	android:selectable="true"
        	android:summary="fifteen minutes"
        	android:dependency="@string/weather_preferences_notifications_switch_key"/>
    </PreferenceCategory>
</PreferenceScreen>
