<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2014 Gustavo Martin Morcuende

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/widget_preferences_country">
        <SwitchPreference android:key="@string/widget_preferences_country_switch_key"
            android:summaryOn="@string/widget_preferences_country_switch_on_summary"
            android:summaryOff="@string/widget_preferences_country_switch_off_summary"
            android:switchTextOff="@string/widget_preferences_country_switch_off"
            android:switchTextOn="@string/widget_preferences_country_switch_on"
            android:selectable="true"
            android:enabled="true"
            android:defaultValue="@string/widget_preferences_country_switch_off"
            android:disableDependentsState="false"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/widget_preferences_temperature_units">
        <ListPreference android:key="@string/widget_preferences_temperature_units_key"
            android:title="@string/weather_preferences_temperature"
            android:summary="@string/weather_preferences_temperature_celsius_human_value"
            android:entries="@array/weather_preferences_temperature_human_value"
            android:entryValues="@array/weather_preferences_temperature"
            android:selectable="true"
            android:persistent="true"
            android:defaultValue="@string/weather_preferences_temperature_celsius" />
    </PreferenceCategory>

</PreferenceScreen>
