<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2014 Gustavo Martin Morcuende

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/weather_appwidget_configure_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/weather_appwidget_configure_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:onClick="onClickOk"
            android:text="@android:string/ok" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/weather_appwidget_configure_button_layout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_preferences_country"
                android:padding="5dp"
                android:layout_gravity="start" />

            <View style="@style/Divider"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp">

                <Switch android:id="@+id/weather_appwidget_configure_country"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/widget_preferences_country_switch_off_summary"
                    android:textOff="@string/widget_preferences_country_switch_off"
                    android:textOn="@string/widget_preferences_country_switch_on" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_preferences_temperature_units"
                android:padding="5dp"
                android:layout_gravity="start" />

            <View style="@style/Divider"/>

            <Spinner android:id="@+id/weather_appwidget_configure_temperature_units"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:entries="@array/weather_preferences_temperature_human_value"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_preferences_button_refresh"
                android:padding="5dp"
                android:layout_gravity="start" />

            <View style="@style/Divider"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_configure_button_refresh_summary"
                    android:padding="5dp"
                    android:layout_gravity="start" />

                <Button android:id="@+id/weather_appwidget_configure_refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="center"
                    android:onClick="onClickRefresh"
                    android:text="@string/widget_preferences_button_refresh"/>

            </GridLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>