<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2014 Gustavo Martin Morcuende

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    
    <item android:id="@+id/weather_menu_settings"
        android:menuCategory="system"
        android:title="@string/weather_preferences_action_settings"
        android:titleCondensed="@string/weather_preferences_action_settings"
        android:checked="false"
        android:visible="true"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/weather_menu_map"
        android:icon="@drawable/ic_action_map"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:checkable="false"
        android:enabled="true"
        android:checked="false"
        android:title="@string/weather_map_action_map"
        android:titleCondensed="@string/weather_map_action_map">
    </item>
    <item android:id="@+id/weather_menu_about"
        android:showAsAction="never"
        android:visible="true"
        android:checkable="false"
        android:enabled="true"
        android:checked="false"
        android:orderInCategory="100"
        android:title="@string/weather_about_action"
        android:titleCondensed="@string/weather_about_action">
    </item>

</menu>
